[project]
name = "inference-core-nodes"
dynamic = ["version"]
description = ""
authors = [
    { name = "Ionite", email = "dev@ionite.io" }
]
readme = "README.md"
requires-python = ">=3.10,<=3.12.11"

dependencies = [
    "Pillow",
    "opencv-python>=4.7.0.72",
    "scipy",
    "scikit-image",
    "python-dateutil",
    "mediapipe",
    "svglib",
    "fvcore",
    "yapf",
    "omegaconf",
    "ftfy",
    "addict",
    "yacs",
    "trimesh[easy]",
    "albumentations",
    "scikit-learn",
    "diffusers>=0.29.0"
]

[project.optional-dependencies]
cpu = []
cuda = []
cuda-12 = []
directml = []
rocm = []

[tool.setuptools.dynamic]
version = {attr = "inference.__version__"}

[tool.setuptools.packages.find]
where = ["src/"]
include = [
    "inference_core_nodes.*"
]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
